--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.1.9",
+    "@vicons/carbon": "^0.10.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
-    "pug": "^3.0.2",
     "naive-ui": "^2.11.8",
-    "sass": "^1.34.1",
+    "pinia": "^2.0.0-beta.3",
     "vfonts": "^0.1.0",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.8",
-    "vuex": "^4.0.1"
+    "vue-router": "^4.0.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
@@ -24,6 +23,8 @@
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.1",
+    "pug": "^3.0.2",
+    "sass": "^1.34.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
     "vue-tsc": "^0.0.24"
