--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@notionhq/client": "^0.1.9",
     "@vicons/carbon": "^0.10.0",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "naive-ui": "^2.11.8",
     "pinia": "^2.0.0-beta.3",
+    "qrcode": "^1.4.4",
     "vfonts": "^0.1.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@vitejs/plugin-vue": "^1.2.3",
