--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "@vicons/carbon": "^0.10.0",
     "axios": "^0.21.1",
+    "highlight.js": "^11.0.1",
     "lodash": "^4.17.21",
     "naive-ui": "^2.11.8",
     "pinia": "^2.0.0-beta.3",
     "qrcode": "^1.4.4",
     "vfonts": "^0.1.0",
-    "vue": "^3.0.5",
+    "vue": "^3.2.2",
     "vue-router": "^4.0.8"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "sass": "^1.34.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
+    "vite-plugin-md": "^0.6.7",
+    "vite-plugin-voie": "^0.7.3",
     "vue-tsc": "^0.0.24"
   }
 }
