--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@vicons/carbon": "^0.10.0",
+    "@vueuse/core": "^7.1.2",
+    "@vueuse/head": "^0.7.2",
     "axios": "^0.21.1",
     "highlight.js": "^11.0.1",
+    "js-md5": "^0.7.3",
     "lodash": "^4.17.21",
     "naive-ui": "^2.11.8",
     "pinia": "^2.0.0-beta.3",
@@ -18,11 +21,14 @@
     "vue-router": "^4.0.8"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.9.0",
+    "@types/js-md5": "^0.4.3",
     "@types/qrcode": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "date-fns": "^2.27.0",
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.1",
     "pug": "^3.0.2",
